--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "imap": "^0.8.19",
     "jsonwebtoken": "^8.5.1",
     "mailparser": "^3.7.4",
+    "moment": "^2.30.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
