--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "stripe": "^18.4.0",
+    "uuid": "^11.1.0"
   }
 }
